[package]
name = "npaperbot-telegram"
version = "4.2.0"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
axum = "0.1.3"
chrono = "0.4.19"
futures = "0.3.15"
lazy_static = "1.4.0"
log = "0.4.14"
nom = "7.0.0-alpha2"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
reqwest = "0.11.4"
serde = "1.0.126"
serde_json = "1.0.64"
teloxide = { version = "0.5.0", features = ["auto-send", "macros"] }
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.7"
tower = "0.4.8"
tower-http = { version = "0.1.1", features = ["trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
url = "2.2.2"

[profile.release]
lto = true
